# docs/swagger.json
@@ -17,7 +17,130 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/login/": {
+        "/change-password": {
+            "post": {
+                "security": [
+                    {
+                        "UserIDAuth": []
+                    }
+                ],
+                "description": "set new password with CurrentPassword, NewPassword",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "set new password for user",
+                "operationId": "user-password-update",
+                "parameters": [
+                    {
+                        "description": "The input for set new password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserPassword"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User password successfully updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data / current password and new password can't be same",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "401": {
+                        "description": "Email id doesn't exist",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "498": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/forget-password": {
+            "post": {
+                "description": "after otp verification set new password with Email, EventType, Token, NewePassword",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "set new password for user in case of forgot password",
+                "operationId": "user-forgotpassword",
+                "parameters": [
+                    {
+                        "description": "The input for set new password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ForgotPasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Password successfully changed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data ",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid email or eventType or token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "498": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
             "post": {
                 "description": "login user with Email, Password",
                 "consumes": [
@@ -82,7 +205,125 @@
                 }
             }
         },
-        "/signup/": {
+        "/otp/request": {
+            "post": {
+                "description": "send otp in registered email for set new user password in case of forgot password with Email, EventType",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "otp for forgot user password",
+                "operationId": "user-otprequest",
+                "parameters": [
+                    {
+                        "description": "The input for otp for forgot password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RequestOTP"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OTP sent to email Successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "401": {
+                        "description": "Email id doesn't exist",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "498": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/otp/verify": {
+            "post": {
+                "description": "otp verification for otp sent in registered email for set new user password in case of forgot password with Email, EventType, OTP",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "verify otp for forgot user password",
+                "operationId": "user-verifyotp",
+                "parameters": [
+                    {
+                        "description": "The input for verify otp for forgot password",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.VerifyOTP"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Token"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid OTP",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "410": {
+                        "description": "OTP Expired",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "498": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/signup": {
             "post": {
                 "description": "add new user details with Email, FullName, Password",
                 "consumes": [
@@ -153,10 +394,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "UserDetails"
                 ],
                 "summary": "fetch all details",
-                "operationId": "user-alldetails",
+                "operationId": "user-alldetails-fetch",
                 "parameters": [
                     {
                         "type": "string",
@@ -274,7 +515,7 @@
                 "tags": [
                     "Exercise"
                 ],
-                "summary": "Add a new exercise for today for today",
+                "summary": "Add a new exercise for today",
                 "operationId": "user-exercise-add",
                 "parameters": [
                     {
@@ -571,6 +812,50 @@
                 }
             }
         },
+        "/user/profile": {
+            "get": {
+                "security": [
+                    {
+                        "UserIDAuth": []
+                    }
+                ],
+                "description": "fetch user profile with Email, FullName, Age, Gender, Height, Weight, HealthGoal, ProfilePhoto",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserDetails"
+                ],
+                "summary": "fetch user profile details",
+                "operationId": "user-profiledetails",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AllDetails"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "498": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                }
+            }
+        },
         "/user/profile/": {
             "put": {
                 "security": [
@@ -830,7 +1115,7 @@
                     "Weight"
                 ],
                 "summary": "update weight details of today",
-                "operationId": "user-weight",
+                "operationId": "user-weight-update",
                 "parameters": [
                     {
                         "description": "The input for update the weight details",
@@ -1001,10 +1286,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "UserDetails"
                 ],
                 "summary": "fetch monthly average of calories burned",
-                "operationId": "user-yearlycaloriesburneddetails",
+                "operationId": "user-yearlycaloriesburned-fetch",
                 "parameters": [
                     {
                         "type": "string",
@@ -1058,10 +1343,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "UserDetails"
                 ],
                 "summary": "fetch monthly average of weight",
-                "operationId": "user-yearlyweightdetails",
+                "operationId": "user-yearlyweight-fetch",
                 "parameters": [
                     {
                         "type": "string",
@@ -1121,16 +1406,10 @@
                     }
                 },
                 "waterDetails": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Meal"
-                    }
+                    "$ref": "#/definitions/models.Water"
                 },
                 "weightDetails": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Exercise"
-                    }
+                    "$ref": "#/definitions/models.Weight"
                 }
             }
         },
@@ -1180,6 +1459,32 @@
                         "gym",
                         "yoga"
                     ]
+                }
+            }
+        },
+        "models.ForgotPasswordInput": {
+            "type": "object",
+            "required": [
+                "email",
+                "eventType",
+                "newPassword",
+                "token"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "eventType": {
+                    "type": "string",
+                    "enum": [
+                        "forgot_password"
+                    ]
+                },
+                "newPassword": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         },
@@ -1241,6 +1546,50 @@
                     "type": "integer"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RequestOTP": {
+            "type": "object",
+            "required": [
+                "email",
+                "eventType"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "eventType": {
+                    "type": "string",
+                    "enum": [
+                        "forgot_password"
+                    ]
+                }
+            }
+        },
+        "models.Token": {
+            "type": "object",
+            "required": [
+                "token"
+            ],
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateUserPassword": {
+            "type": "object",
+            "required": [
+                "currentPassword",
+                "newPassword"
+            ],
+            "properties": {
+                "currentPassword": {
+                    "type": "string"
+                },
+                "newPassword": {
                     "type": "string"
                 }
             }
@@ -1341,6 +1690,25 @@
                     "type": "number",
                     "maximum": 700,
                     "minimum": 2
+                }
+            }
+        },
+        "models.VerifyOTP": {
+            "type": "object",
+            "required": [
+                "email",
+                "eventType",
+                "otp"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "eventType": {
+                    "type": "string"
+                },
+                "otp": {
+                    "type": "string"
                 }
             }
         },
